# routes/users.js
@@ -1,9 +1,35 @@
 var express = require('express');
-var router = express.Router();
+const User = require('../models/User')
 
-/* GET users listing. */
-router.get('/', function(req, res, next) {
-  res.send('respond with a resource');
-});
+const router = express.Router()
+
+router.post('/register', async (req, res) => {
+    // Create a new user
+    try {
+        
+        const user = new User(req.body)
+        await user.save()
+        const token = await user.generateAuthToken()
+        res.status(201).send({ user, token })
+    } catch (error) {
+        
+        res.status(400).send(error)
+    }
+})
+
+router.post('/login', async(req, res) => {
+    //Login a registered user
+    try {
+        const { id, password } = req.body
+        const user = await User.findByCredentials(id, password)
+        if (!user) {
+            return res.status(401).send({error: 'Login failed! Check authentication credentials'})
+        }
+        const token = await user.generateAuthToken()
+        res.send({ user, token })
+    } catch (error) {
+        res.status(400).send(error)
+    }
+})
 
 module.exports = router;
